Changed max container width to prevent stretchiong on long numbers

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ body {
     border-radius: 12px;
     box-shadow: 0px 0px 6px #000;
     padding: 4px;
+    width: 500px;
 }
 
 #keyContainer {
